[package]
name = "pixiv-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "cookies", "hyper-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest_cookie_store = "0.5.0"
cookie_store = "0.19.0"
cookie = "0.16.1"
log = "0.4.17"
